[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name = "aoc"
dependencies = ["pytest==8.2.2"]
license = { file = "LICENSE" }
requires-python = ">=3.10"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]