[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name = "aoc"
dependencies = ["pytest==8.2.2", "click==8.1.7"]
license = { file = "LICENSE" }
requires-python = ">=3.10"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]

[project.scripts]
y2023-d01 = "y2023_d01.main:cli"
y2023-d02 = "y2023_d02.main:cli"